<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/statusTextViewDefaultString"
        android:textSize="18.0sp" />

    <LinearLayout
        android:id="@+id/seekBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:layout_marginBottom="16dp">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:progressTint="@color/foreground"
            android:thumbTint="@color/foregroundVariant" />

        <TextView
            android:id="@+id/progressTextView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/progressTextViewDefaultString"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        style="?android:buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playButton"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/playButtonString" />

        <Button
            android:id="@+id/pauseButton"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/pauseButtonString" />

        <Button
            android:id="@+id/stopButton"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stopButtonString" />

        <Button
            android:id="@+id/exitButton"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/exitButtonString" />
    </LinearLayout>
</RelativeLayout>
